--- a/index.html
+++ b/index.html
@@ -15,22 +15,22 @@
             <button class="key blue" id="clear">AC</button>
             <button class="key blue" id="negation">+/-</button>
             <button class="key blue" id="percent">%</button>
-            <button class="key orange">/</button>
+            <button class="key orange" id="division">/</button>
             <button class="key green">7</button>
             <button class="key green">8</button>
             <button class="key green">9</button>
-            <button class="key orange">*</button>
+            <button class="key orange" id="multiplication">*</button>
             <button class="key green">4</button>
             <button class="key green">5</button>
             <button class="key green">6</button>
-            <button class="key orange">-</button>
+            <button class="key orange" id="substraction">-</button>
             <button class="key green">1</button>
             <button class="key green">2</button>
             <button class="key green">3</button>
-            <button class="key orange">+</button>
+            <button class="key orange" id="addition">+</button>
             <button class="key zero green">0</button>
             <button class="key green">.</button>
-            <button class="key orange">=</button>
+            <button class="key orange" id="equal">=</button>
         </div>
     </div>
 </body>
